# async-wiiload

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
src/wiiload/: __init__.py  __main__.py  upload.py
tests/: test_main.py  test_upload.py
wiiload/: __main__.py  upload.py
